# aws-cdk-data-lake

./: .gitignore  Makefile  README.md  _pyproject.toml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: Makefile  config.toml
src/commons/: requirements.txt
src/commons/constructs/: __init__.py  kms.py
src/commons/constructs/aws/: s3.py
src/commons/helper/: __init__.py  cdk.py  kms.py  s3.py
src/commons/model/: __init__.py  account.py  company.py  project.py  resource.py  resource_type.py  storage.py  tags.py
src/commons/service/: __init__.py  data_lake_storage.py
src/commons/tests/: test_account.py  test_resource.py
src/commons/utils/: __init__.py  common_decorators.py  config_loader.py  constants.py  loader.py  logger.py  resource_name.py  utils.py
src/tests/: test_config_loader.py
